src/tests/errors/return_type/source.z42
namespace Demo;

int Add(int a, int b) {
    return "not a number";
}
